Ticket #1056 (closed defect: fixed)

Opened 2 years ago

Last modified 2 years ago

net_Read API broken by design

Reported by: courmisch Assigned to: courmisch
Priority: normal Milestone: 0.9.0 features freeze
Component: Network Version: master
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description (Last modified by courmisch)

net_ReadNonBlock and net_Select APIs do not allow caller to differentiate between end-of-file and input timeout: they used to return zero in both cases. Now they return 0 only in case of EOF, and -1 otherwise with errno set to EAGAIN, but related code is broken (it has always been one way or the other).

Change History

02/15/07 17:21:21 changed by courmisch

  • status changed from new to assigned.

02/15/07 17:37:02 changed by courmisch

  • description changed.

02/15/07 18:12:29 changed by courmisch

(In [18849]) - Fix error reporting in net_Read* (refs #1056) - Suppress broken and unused timeout value from net_ReadNonBlock()

02/15/07 18:17:48 changed by courmisch

(In [18850]) Suppress timeout parameter from net_Select() - refs #1056. The only use of the timeout was to poll b_die, but net_ReadInner() takes care of that already.

02/15/07 18:26:23 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.

(In [18851]) Remove timeout in network read APIs - closes #1056