- Fix error reporting in net_Read* (refs #1056) - Suppress broken and unused timeout value from net_ReadNonBlock()